--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         }
     ],
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "satooshi/php-coveralls": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "Sokil\\DataType\\": "src/"
