--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "0.7.*"
     },
     "autoload": {
         "psr-4": {
