--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,17 @@
     ],
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "0.7.*"
+        "phpunit/phpunit": "^4.8 || ^5.5",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "Sokil\\DataType\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            
         }
     }
 }
