--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+
 php:
   - hhvm
   - 7.0
@@ -7,14 +8,13 @@ php:
   - 5.6
   - 5.5
   - 5.4
-  - 5.3
 
 before_script:
   - composer install --dev --no-interaction
   
 script:
   - mkdir -p build/logs
-  - phpunit --bootstrap ./tests/bootstrap.php -c tests/phpunit.xml --coverage-clover build/logs/clover.xml tests
-  
+  - php vendor/bin/phpunit -c tests/phpunit.xml --coverage-clover build/logs/clover.xml
+
 after_script:
   - php ./vendor/bin/coveralls -v
