--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
             "email": "dmytro.sokil@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.4"
+    },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.5",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "^0.7"
     },
     "autoload": {
         "psr-4": {
@@ -20,7 +22,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            
+            "Sokil\\DataType\\": "tests/"
         }
     }
 }
