--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ php:
   - 5.5
   - 5.4
 
+matrix:
+  include:
+    - php: 5.3
+      dis: precise
+
 before_script:
   - composer install --dev --no-interaction
   
