--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,20 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "0.7.*"
+        "satooshi/php-coveralls": "0.7.*",
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "Sokil\\DataType\\": "src/"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
+        "dockertest": "./run-docker-tests.sh",
+        "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover ./share/phpunit/clover.xml ./tests",
+        "coveralls": "./vendor/bin/coveralls -v",
+        "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
     }
 }
